# simple_tools

./: .gitignore  .gitmodules  LICENSE  README.md  convert-lower.js  convert-to-mts.js  convert-to-ogg.js  convert-to-webm.js  convertVideoToImages.py  find-repeat-name.js  package-lock.json  package.json  reset-font-system.js  texture_packer.js
common/: common.js
config2json/: convert.bat  convert.js  json.lua  transform.lua
decode-creator/: decode.js
decode-creator/cocos2d/: deprecated.js  index.js
decode-uuid/: decode-uuid.js
download-assets/: download_assets.js
download-assets/urls/: url.txt
emscripten-package-file/: main.js  template.js
fbx2gltf/: main.js  readme.md
scaleSpine/: main.js
scaleSpine/src/: scale_atals.js  scale_image.js
socket-webscoekt/: package-lock.json  run-server.bat  socket.js  web-server.js
split/: split-plist.js
texture2webm/: config.js  fairygui.d.ts  fairygui.mjs  fgui.js  main.js  readme.md
ts2js/: output.bat  tsconfig.json
ts2js/output/: AttachUtil.js  Skeleton.js  index.js  skeleton-cache.js  skeleton-data.js  skeleton-texture.js  (+3 more)
webm/: 1.py  2.py  2批量整理动画帧.bat  cache.json  config.js  main.js  pack-config.json  package-lock.json  temp.js  vp9-2-png.js  webm.js
webm-parser/: .gitignore  CMakeLists.txt  main.cpp  readme.md
webm-parser/src/: main.cpp  xx2d_mv.cpp  xx2d_mv.h
webm-parser/third/webm/: CMakeLists.txt  vpx_config.c  vpx_config.h  vpx_dsp_rtcd.h
webm-parser/third/xxlib/: CMakeLists.txt  xx2d_engine.cpp  xx2d_engine.h  xx2d_engine_filesystem.cpp  xx2d_enums.h  xx2d_utils.cpp  xx2d_utils.h
(+496 files in other folders)
